syntax = "proto3";

option csharp_namespace = "GrpcServiceMTwitter";

service Tweet {
  rpc PostTweet (TweetRequest) returns (TweetResponse); // Sends a tweet for server, returns if it was succesfully added
  rpc GetLastNTweets(GetLastNTweetsRequest) returns (GetLastNTweetsResponse); // Sends a number of tweets to return, returns tweets
  rpc AuthenticateUser (UserCredentials) returns (AuthenticationResponse); // Sends a password and username, returns userId from database
  rpc GetAllYourPost (GetLastNTweetsRequest) returns (GetLastNTweetsResponse); // Sends an userId, returns allTweets for this particular user
}

message TweetRequest {
  string content = 1;
  string userName = 2;
}

message TweetResponse {
  string message = 1;
}

message GetLastNTweetsRequest {
    int32 count = 1;
}

message GetLastNTweetsResponse {
    repeated TweetRequest tweets = 1;
}

message AuthenticationResponse {
  bool isAuthenticated = 1;
  int32 id = 2;
}

message UserCredentials {
  string username = 1;
  string password = 2;
}



